<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
		android:id="@+id/textView"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/hello"
    	/>
    
   
        
    <com.chunquedong.chungo.TileView 
	    android:id="@+id/tileView" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    />
	    
	    
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="horizontal">
    	
		    <EditText
		    	android:id="@+id/editText"
		    	android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1" 
		        android:text="0"
		        />
		    <Button
		    	android:id="@+id/gotoBtn"
		    	android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/gotoBtn"
		        android:layout_weight="1" 
		        />
		    <Button
		    	android:id="@+id/backBtn"
		    	android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/backBtn"
		        android:layout_weight="1" 
		        />
		    <Button
		    	android:id="@+id/forwardBtn"
		    	android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/forwardBtn"
		        android:layout_weight="1" 
		        />
		    <Button
		    	android:id="@+id/returnBtn"
		    	android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/returnBtn"
		        android:layout_weight="1" 
		        />
        
        </LinearLayout>
</LinearLayout>
